--- a/idle42/README
+++ b/idle42/README
@@ -4,5 +4,6 @@ Need to be able to load a load heros;
 Need to coolize output;
 Need to make a score table;
 Need to be able to give stat;
+Need to detect key without a \n;
 
 At the norm.
